背景画像を反映

--- a/style.css
+++ b/style.css
@@ -5,6 +5,26 @@ body {
 	margin-right: auto;
 }
 
+div {
+	position: relative;
+	width: 800px;
+	height: 600px;
+	margin: 0 auto;
+}
+
+div .back {
+	width: 800px;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+div .face {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+}
+
 textarea {
 	width: 409px;
 }
