--- a/style.css
+++ b/style.css
@@ -5,10 +5,12 @@ body {
 	margin-right: auto;
 }
 
+/* タイトル */
 h1 {
-	margin: 0;
+	margin: 0 0 5px 0;
 }
 
+/* 画面 */
 div {
 	position: relative;
 	width: 600px;
@@ -18,17 +20,16 @@ div {
 
 img.back {
 	width: 600px;
-	position: absolute;
-	top: 0;
-	left: 0;
 }
 
 img.face {
 	position: absolute;
-	bottom: 0;
-	right: 0;
+	bottom: -35px;
+	left: -80px;
+	width: 400px;
 }
 
+/* テキスト */
 textarea {
 	width: 590px;
 }
